Backport GUI changes to 1.16.5